<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nyc.c4q.dogassessment.BreedsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/thirty"
            android:layout_margin="@dimen/margin16"/>

        <android.support.v7.widget.CardView
            android:id="@+id/terrier_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hundred"
            android:layout_margin="@dimen/margin16">

            <TextView
                android:id="@+id/terrier_cardview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terrier"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/twent"
                android:textSize="@dimen/twent"/>
            <ImageView
                android:id="@+id/terrier_cardview_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="right"/>


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/spaniel_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hundred"
            android:layout_margin="@dimen/margin16">

            <TextView
                android:id="@+id/spaniel_cardview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spaniel"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/twent"
                android:textSize="@dimen/twent"/>
            <ImageView
                android:id="@+id/spaniel_cardview_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="right"/>


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/retriever_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hundred"
            android:layout_margin="@dimen/margin16">

            <TextView
                android:id="@+id/retriever_cardview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retriever"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/twent"
                android:textSize="@dimen/twent"/>
            <ImageView
                android:id="@+id/retriever_cardview_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="right"/>


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/poodle_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hundred"
            android:layout_margin="@dimen/margin16">

            <TextView
                android:id="@+id/poodle_cardview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poodle"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/twent"
                android:textSize="@dimen/twent"/>
            <ImageView
                android:id="@+id/poodle_cardview_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="right"/>


        </android.support.v7.widget.CardView>



    </LinearLayout>

</ScrollView>
